# libidx

./: CMakeLists.txt  README.dev.md  README.md
data/: double.2d.idx  float.1d.idx  int16.2d.idx  int16.idx  int32.2d.idx  int8.idx  uint8.1d.idx  uint8.2d.idx
include/idx/: division.h  idx.h  multiplication.h
src/example/: CMakeLists.txt  bodies.c  bodies.h  main.c  strategies.c  strategies.h
src/example-idx-any-type/: CMakeLists.txt  strategies.c
src/example-idx-uint8/: CMakeLists.txt  main.c
src/example_int16_2d/: CMakeLists.txt  main.c
src/example_uint8_1d/: CMakeLists.txt  main.c
src/idx/: CMakeLists.txt  division.c  idx.c  multiplication.c  protected.c  protected.h
src/idx-example-any-type/: CMakeLists.txt  main.c
src/idx-example-uint8/: CMakeLists.txt  main.c
src/idxread/: CMakeLists.txt  main.c
test/idx/: CMakeLists.txt  test_idx.c  test_multiplication.c
